# rplc

./: .gitignore  Cargo.toml
src/: classic.rs  main.rs  main2
src/libs/: debounce.rs  debug.rs  decorate_file_content.rs  file.rs  file_tree.rs  files.rs  ignore.rs  mod.rs  scrollbar.rs  split_query.rs  state.rs  syntax_highlight.rs  terminal.rs
src/libs/store/: code.rs  files.rs  mod.rs  query.rs  tree.rs  windows.rs
src/libs/ui/: window.rs
src/libs/windows/: code.rs  file_tree.rs  mod.rs
src/modes/: classic.rs  interactive.rs  mod.rs
test/: text.txt
test/toto/: tutu.txt
