[package]
name = "rplc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.10", features = ["derive"] }
crossterm = "0.27.0"
ignore = "0.4"
lazy_static = "1.4.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"]}
chrono = "0.4.38"
globset = "0.4.15"
